2011-04-01  Jon Lee  <jonlee@apple.com>

Reviewed by Darin Adler.

        WebKit2: Type-to-select doesn't work in open <select> menu (53023)
        https://bugs.webkit.org/show_bug.cgi?id=53023
        <rdar://problem/8907678>

        * UIProcess/WebPageProxy.h:
        * UIProcess/WebPageProxy.messages.in: adding new setPopupMenuSelectedIndex message for windows platform
        * UIProcess/win/WebPageProxyWin.cpp:
        (WebKit::WebPageProxy::setPopupMenuSelectedIndex):
        * UIProcess/win/WebPopupMenuProxyWin.h: moving setFocusedIndex() into public method
        * WebProcess/WebCoreSupport/WebPopupMenu.cpp:
        (WebKit::WebPopupMenu::updateFromElement): send message back to UIProcess to update the selected element

Canonical link: https://commits.webkit.org/72550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82763 268f45cc-cd09-0410-ab3c-d52691b4dbfc